infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    dev.okteto.com/auto-ingress: "true"
  name: ingress-service
  labels:
    name: ingress-service
spec:
  rules:
    - host: tickets-denyslins.cloud.okteto.net
      http:
        paths:
          - pathType: Prefix
            path: "/api/users/?(.*)"
            backend:
              service:
                name: auth-clusterip-service
                port:
                  number: 3000
          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: client-clusterip-service
                port:
                  number: 3000
